--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,3 @@
-<p id="notice"></p>
-<div class="container">
-<div class="row">
-  <div class="col-md-3">
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
@@ -19,21 +15,19 @@
         <tbody>
           <tr>
             <th><%= attachment_image_tag @book.user, :profile_image ,fallback:'no_image.jpg' %></th>
+          </tr>
+          <tr>
             <th>name</th>
-            <th><%=current_user.name %></th>
+            <th><%= @book.user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%=current_user.introduction %></th>
+            <th><%= @book.user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row"></div>
-      <div><%= link_to "Edit", edit_user_path(current_user) %></div>
-    </div>
-    <div class="col-md-8 offset-md-1"></div>
-  </div>
-</div>
+      <div><%= link_to "", edit_user_path(@book.user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %></div>
 
 
 
@@ -72,8 +66,8 @@
     <td><%= link_to @book.title ,book_path(@book)%></td>
     <td><%= @book.body %></td>
     <% if @book.user == current_user %>
-    <td><%= link_to "Edit" ,edit_book_path(@book)%></td>
-    <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "Are you sure?"} %></td>
+    <td><%= link_to "Edit" ,edit_book_path(@book), class:"btn btn-sm btn-success "%></td>
+    <td><%= link_to "Destroy", book_path(@book), class:"btn btn-sm btn-danger",method: :delete, data: {confirm: "Are you sure?"} %></td>
     <% else %>
     <td></td>
     <td></td>
