--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <%= notice %>
 <h1>Editing Book</h1>
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this obj from being saved:
