--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,24 +18,20 @@
         <tbody>
           <tr>
             <th><%= attachment_image_tag current_user, :profile_image ,fallback:'no_image.jpg' %></th>
-            <th>name</th>
-            <th><%=current_user.name %></th>
           </tr>
+          <tr><th>name</th>
+            <th><%=current_user.name %></th></tr>
           <tr>
             <th>introduction</th>
             <th><%=current_user.introduction %></th>
           </tr>
         </tbody>
       </table>
-      <div><%= link_to "Edit", edit_user_path(current_user) %></div>
-    </div>
-    <div class="col-md-8 offset-md-1"></div>
-  </div>
-</div>
+      <div><%= link_to "", edit_user_path(current_user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %></div>
 
 
 
-<h1>New book</h1>
+<h2 class="mt-3">New book</h2>
 <%= form_with model:@book, local:true do |f| %>
 
   <h4>Title</h4>
@@ -49,12 +45,13 @@
   <%= f.submit 'Create Book' %>
 
 <% end %>
+</div>
+<div class="col-md-8 offset-md-1">
+<h2>Books</h2>
 
-<h1>Books</h1>
 
 
-
-<table>
+<table class="table table-hover table-inverse">
 <thead>
   <tr>
     <th>Title</th>
@@ -65,7 +62,9 @@
  <tbody>
    <% @books.each do |book| %>
   <tr>
-    <td><%= attachment_image_tag book.user, :profile_image ,fallback:'no_image.jpg' %></td>
+    <td><%= link_to user_path(book.user.id) do %>
+      <%= attachment_image_tag book.user, :profile_image ,fallback:'no_image.jpg' %>
+      <% end %></td>
     <td><%= link_to book.title, book_path(book.id) %></td>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
@@ -73,3 +72,6 @@
  <% end %>
  </tbody>
  </table>
+ </div>
+ </div>
+ </div>
