--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,38 +6,71 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <header>
-      <span>Bookers</span>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/"><span>Bookers</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
     <li class="nav-item">
-      <%= link_to 'Home', root_path %>
+      <%= link_to 'Home', user_path(current_user), class:"fas fa-home nav-link text-light" %>
     </li>
     <li class="nav-item">
-      <%= link_to 'About', about_path %>
+      <%= link_to 'Users', users_path, class:"fas fa-users nav-link text-light" %>
     </li>
     <li class="nav-item">
-      <%= link_to "Sign up", new_user_registration_path, method %>
+      <%= link_to "Books", books_path, class:"fas fa-book-open nav-link text-light" %>
     </li>
     <li>
-      <%= link_to 'login', user_path(current_user.id) %>
+      <%= link_to 'logout', destroy_user_session_path, class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
     </li>
+    </ul>
   <% else %>
-<li class="nav-item">
-      <%= link_to 'Home', root_path %>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <%= link_to 'Home', root_path, class:"fas fa-home nav-link text-light" %>
     </li>
     <li class="nav-item">
-      <%= link_to 'User', users_path %>
+      <%= link_to 'About', home_about_path, class:"fas fa-link nav-link text-light" %>
     </li>
     <li class="nav-item">
-      <%= link_to "Books", destroy_user_session_path, method %>
+      <%= link_to "sign up", new_user_registration_path, class:"fas fa-user-plus nav-link text-light" %>
     </li>
     <li>
-      <%= link_to 'logout', user_path(current_user.id) %>
+      <%= link_to 'login', new_user_session_path, class:"fas fa-sign-in-alt nav-link text-light" %>
     </li>
+    <% end %>
+    </ul>
+    </div>
+    </div>
+    </div>
       </header>
+      <main>
+     <% flash.each do |key, value| %>
+    <p class="alert alert-<%= key %>">
+      <%= value %>
+    </p>
+<% end %>
     <%= yield %>
-    <footer></footer>
+    </main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+      <p>CopyRight Infratop.inc</p>
+      </div>
+      </div>
+      </div>
+      </nav>
+      </footer>
   </body>
 </html>
