--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,11 +12,11 @@
 <% end %>
 <%= form_with model:@user, local:true do |f| %>
   <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%></br>
   <label for="inputImage">Image</label>
-  <%= f.attachment_field :profile_image, placeholder: "ファイルを選択" %>
+  <%= f.attachment_field :profile_image, placeholder: "ファイルを選択" %></br>
   <label for="inputName">introduction</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputName"%>
+  <%= f.text_area :introduction, autofocus: true, id:"inputName"%></br>
   <%= f.submit "Update User" %>
 <% end %>
 </div>
