--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,16 +7,16 @@
         <tbody>
           <tr>
             <th><%= attachment_image_tag current_user, :profile_image,fallback:'no_image.jpg' %></th>
-            <th>name</th>
-            <th><%=@user.name %></th>
           </tr>
+          <tr><th>name</th>
+            <th><%=@user.name %></th></tr>
           <tr>
             <th>introduction</th>
             <th><%=@user.introduction %></th>
           </tr>
         </tbody>
       </table>
-      <div class="row"><%= link_to "Edit", edit_user_path(@user) %></div>
+      <div class="row"><%= link_to "", edit_user_path(@user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %></div>
     <div class="col-md-8 offset-md-1"></div>
 
 
@@ -53,7 +53,7 @@
   <tr>
     <td><%= attachment_image_tag user, :profile_image,fallback:'no_image.jpg' %></td>
     <td><%= user.name %></td>
-    <td><%= link_to 'show' ,user_path(user.id) %></td>
+    <td><%= link_to 'Show' ,user_path(user.id) %></td>
  </tr>
  <% end %>
  </tbody>
