--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,26 +2,35 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
+<% if @user.errors.any? %>
+<%= @user.errors.count %>errors prohibited this book from being saved:
+<ul>
+  <% @user.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    </ul>
+  <% end %>
+  <% end %>
       <h2>User info</h2>
       <table class="table">
         <tbody>
           <tr>
-            <th><%= attachment_image_tag @user, :profile_image,fallback:'no_image.jpg' %></th>
-            <th>name</th>
-            <th><%=@user.name %></th>
+            <th><%= attachment_image_tag current_user, :profile_image,fallback:'no_image.jpg' %></th>
           </tr>
+          <tr><th>name</th>
+            <th><%=@user.name %></th></tr>
           <tr>
             <th>introduction</th>
             <th><%=@user.introduction %></th>
           </tr>
         </tbody>
       </table>
-      <div class="row"><%= link_to "Edit", edit_user_path(@user) %></div>
+      <div class="row"><%= link_to "", edit_user_path(@user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %></div>
     <div class="col-md-8 offset-md-1"></div>
 
 
 
 <h2 class="mt-3">New book</h2>
+
 
 <%= form_with model:@book, local:true do |f| %>
 
@@ -36,29 +45,33 @@
   <%= f.submit 'Create Book' %>
 </div>
 <% end %>
+
+
 <div class="col-md-8 offset-md-1">
-<h2>Books</h2>
+  <h2>Books</h2>
 
-
-
-<table class="table table-hover table-inverse">
-<thead>
-  <tr>
-    <th>Title</th>
-    <th>opinion</th>
-    <th colspan=3></th>
-  </tr>
- </thead>
- <tbody>
-   <% @user.books.each do |book| %>
-  <tr>
-    <td><%= attachment_image_tag @user, :profile_image,fallback:'no_image.jpg' %></td>
-    <td><%= link_to book.title, book_path(book.id) %></td>
-    <td><%= book.body %></td>
- </tr>
- <% end %>
- </tbody>
- </table>
+  <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>opinion</th>
+      <th colspan=3></th>
+    </tr>
+   </thead>
+   <tbody>
+     <% @books.each do |book| %>
+    <tr>
+      <td> <%= link_to user_path(book.user.id) do %>
+        <%= attachment_image_tag book.user, :profile_image ,fallback:'no_image.jpg' %>
+        <% end %>
+        </td>
+      <td><%= link_to book.title, book_path(book.id) %></td>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+   </tr>
+   <% end %>
+   </tbody>
+   </table>
 </div>
 </div>
 </div>
